Small fixes on IOS

--- a/src/pages/events/eventview/eventview.scss
+++ b/src/pages/events/eventview/eventview.scss
@@ -24,7 +24,7 @@ page-eventview{
 	 .left{
         display: inline-block;
         vertical-align: text-bottom;
-        width:20%;
+        width:23%;
     }
     .right{
         display: inline-block;
