--- a/src/pages/idea/idea.scss
+++ b/src/pages/idea/idea.scss
@@ -42,7 +42,7 @@ page-idea {
         color:white;
         text-align: right;
 
-        h1{
+        h3{
             color:#a1238e !important;
         }
         span{
